--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,12 @@
     .w-66 {
         width:66% !important;
     }
+
+    .list-group-item p:nth-child(6) { /* give it a class instead */
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 4;
+      
+    }
