--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
     }
+
+    h2 {
+        margin-bottom:2rem;
+    }
     
     code {
         font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
